syntax = "proto3";

package mapreduce;

enum MessageType {
    EMPTY = 0;
    WORKER_ASSIGNMENT = 1;
    WORKER_SIGN_OFF = 2;
    TASK_MAP = 3;
    TASK_REDUCE = 4;
    RESULT_MAP = 5;
    RESULT_REDUCE = 6;
    CONFIRM = 7;
    JOB_REQUEST = 8;
    JOB_RESULT = 9;
    AUTHENTICATION = 10;
}

enum ConnectionType {
    CLIENT = 0;
    WORKER = 1;
}

message Emtpy{}

message WorkerAssignment{
    MessageType type = 1;
    int32 worker_id = 2;
}

message WorkerSignOff{
    MessageType type = 1;
    int32 worker_id = 2;
}

message TaskMap{
    MessageType type = 1;
    string data = 2;
}

message TaskReduce{
    MessageType type = 1;
    int32 key = 2;
    repeated string values = 3;
}

message ResultMap{
    MessageType type = 1;
    int32 key = 2;
    string value = 3;
}

message ResultReduce{
    MessageType type = 1;
    int32 key = 2;
    string value = 3;
}

message Confirm{
    MessageType type = 1;
    int32 worker_id = 2;
    ConnectionType connection_type = 3;
}

message JobRequest{
    MessageType type = 1;
    int32 job_id = 2;
    string data = 3;
    int32 num_mappers = 4;
    int32 num_reducers = 5;
}

message JobResult{
    MessageType type = 1;
    int32 job_id = 2;
    string data = 3;
}

message Authentication{
    ConnectionType type = 1;
}